@@ -1,7 +1,7 @@
 /*
  * The MIT License
  *
- * Copyright (c) 2009-2021 PrimeTek
+ * Copyright (c) 2009-2025 PrimeTek Informatics
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,26 +23,25 @@
  */
 package org.primefaces.util;
 
-import java.io.ByteArrayOutputStream;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
-import java.math.BigInteger;
-import java.net.URLEncoder;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
-import java.util.Base64;
-import java.util.Map;
-import java.util.function.Consumer;
-import javax.el.ValueExpression;
-import javax.faces.FacesException;
-import javax.faces.application.Resource;
-import javax.faces.component.UIComponent;
-import javax.faces.component.UIParameter;
-import javax.faces.context.FacesContext;
 import org.primefaces.application.resource.DynamicContentType;
+import org.primefaces.context.PrimeApplicationContext;
 import org.primefaces.el.ValueExpressionAnalyzer;
 import org.primefaces.model.StreamedContent;
+
+import java.io.InputStream;
+import java.math.BigInteger;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.util.Map;
+
+import jakarta.el.ValueExpression;
+import jakarta.faces.FacesException;
+import jakarta.faces.application.Resource;
+import jakarta.faces.component.UIComponent;
+import jakarta.faces.component.UIParameter;
+import jakarta.faces.context.FacesContext;
 
 public class DynamicContentSrcBuilder {
 
@@ -61,7 +60,7 @@ public class DynamicContentSrcBuilder {
 
         if (String.class.isAssignableFrom(type)) {
             String src = ResourceUtils.getResourceURL(context, (String) value.get());
-            return encodeResourceURL(context, src, cache);
+            return ResourceUtils.encodeResourceURL(context, src, cache);
         }
         else if (StreamedContent.class.isAssignableFrom(type)) {
             if (stream) {
@@ -71,9 +70,9 @@ public class DynamicContentSrcBuilder {
             else {
                 StreamedContent streamedContent = (StreamedContent) value.get();
                 if (streamedContent.getWriter() != null) {
-                    return buildBase64(context, streamedContent.getWriter(), streamedContent.getContentType());
+                    return ResourceUtils.toBase64(context, streamedContent.getWriter(), streamedContent.getContentType());
                 }
-                return buildBase64(context, streamedContent.getStream().get(), streamedContent.getContentType());
+                return ResourceUtils.toBase64(context, streamedContent.getStream().get(), streamedContent.getContentType());
             }
         }
         else if (byte[].class.isAssignableFrom(type)) {
@@ -82,7 +81,7 @@ public class DynamicContentSrcBuilder {
                 return buildStreaming(context, component, extractedVE, cache);
             }
             else {
-                return buildBase64(context, (byte[]) value.get());
+                return ResourceUtils.toBase64(context, (byte[]) value.get());
             }
         }
         else if (InputStream.class.isAssignableFrom(type)) {
@@ -91,30 +90,27 @@ public class DynamicContentSrcBuilder {
                 return buildStreaming(context, component, extractedVE, cache);
             }
             else {
-                return buildBase64(context, (InputStream) value.get());
+                return ResourceUtils.toBase64(context, (InputStream) value.get());
             }
         }
 
         return "";
     }
 
-    public static String buildStreaming(FacesContext context, ValueExpression valueExpression, boolean cache) {
-        return buildStreaming(context, null, valueExpression, cache);
-    }
-
     public static String buildStreaming(FacesContext context, UIComponent component, ValueExpression valueExpression, boolean cache) {
 
         // just a dummy file for streaming
-        // JSF will also append the suffix (e.g. -> dynamiccontent.properties.xhtml)
+        // Faces will also append the suffix (e.g. -> dynamiccontent.properties.xhtml)
         // the real content type will be written to the response by the StreamedContentHandler
         Resource resource = context.getApplication().getResourceHandler().createResource(
                 "dynamiccontent.properties", "primefaces", "text/plain");
         String resourcePath = resource.getRequestPath();
 
         Map<String, Object> session = context.getExternalContext().getSessionMap();
-        Map<String, String> dynamicResourcesMapping = (Map) session.get(Constants.DYNAMIC_RESOURCES_MAPPING);
+        Map<String, String> dynamicResourcesMapping = (Map<String, String>) session.get(Constants.DYNAMIC_RESOURCES_MAPPING);
         if (dynamicResourcesMapping == null) {
-            dynamicResourcesMapping = new LimitedSizeHashMap<>(200);
+            int limit = PrimeApplicationContext.getCurrentInstance(context).getConfig().getDynamicContentLimit();
+            dynamicResourcesMapping = new LimitedSizeHashMap<>(limit);
             session.put(Constants.DYNAMIC_RESOURCES_MAPPING, dynamicResourcesMapping);
         }
 
@@ -123,99 +119,30 @@ public class DynamicContentSrcBuilder {
 
         dynamicResourcesMapping.put(resourceKey, expressionString);
 
-        try {
-            StringBuilder builder = SharedStringBuilder.get(context, SB_BUILD_STREAMING);
-            builder.append(resourcePath)
-                    .append("&").append(Constants.DYNAMIC_CONTENT_PARAM).append("=").append(URLEncoder.encode(resourceKey, "UTF-8"))
-                    .append("&").append(Constants.DYNAMIC_CONTENT_TYPE_PARAM).append("=").append(DynamicContentType.STREAMED_CONTENT.toString());
+        StringBuilder builder = SharedStringBuilder.get(context, SB_BUILD_STREAMING);
+        builder.append(resourcePath)
+                .append("&").append(Constants.DYNAMIC_CONTENT_PARAM).append("=").append(URLEncoder.encode(resourceKey, StandardCharsets.UTF_8))
+                .append("&").append(Constants.DYNAMIC_CONTENT_TYPE_PARAM).append("=").append(DynamicContentType.STREAMED_CONTENT);
 
-            if (component != null) {
-                for (int i = 0; i < component.getChildCount(); i++) {
-                    UIComponent child = component.getChildren().get(i);
-                    if (child instanceof UIParameter) {
-                        UIParameter param = (UIParameter) child;
-                        if (!param.isDisable()) {
-                            Object paramValue = param.getValue();
+        if (component != null) {
+            for (int i = 0; i < component.getChildCount(); i++) {
+                UIComponent child = component.getChildren().get(i);
+                if (child instanceof UIParameter) {
+                    UIParameter param = (UIParameter) child;
+                    if (!param.isDisable()) {
+                        Object paramValue = param.getValue();
 
-                            builder.append("&").append(param.getName()).append("=");
+                        builder.append("&").append(param.getName()).append("=");
 
-                            if (paramValue != null) {
-                                builder.append(URLEncoder.encode(paramValue.toString(), "UTF-8"));
-                            }
+                        if (paramValue != null) {
+                            builder.append(URLEncoder.encode(paramValue.toString(), StandardCharsets.UTF_8));
                         }
                     }
                 }
             }
-
-            return encodeResourceURL(context, builder.toString(), cache);
         }
-        catch (UnsupportedEncodingException ex) {
-            throw new FacesException(ex);
-        }
-    }
 
-    public static String buildBase64(FacesContext context, InputStream is) {
-        return buildBase64(context, toByteArray(is), null);
-    }
-
-    public static String buildBase64(FacesContext context, Consumer<OutputStream> writer, String contentType) {
-        return buildBase64(context, toByteArray(writer), contentType);
-    }
-
-    public static String buildBase64(FacesContext context, InputStream is, String contentType) {
-        return buildBase64(context, toByteArray(is), contentType);
-    }
-
-    public static String buildBase64(FacesContext context, byte[] bytes) {
-        return buildBase64(context, bytes, null);
-    }
-
-    public static String buildBase64(FacesContext context, byte[] bytes, String contentType) {
-        String base64 = Base64.getEncoder().withoutPadding().encodeToString(bytes);
-        if (contentType == null) {
-            // try to guess content type from magic numbers
-            if (base64.startsWith("R0lGOD")) {
-                contentType = "image/gif";
-            }
-            else if (base64.startsWith("iVBORw")) {
-                contentType = "image/png";
-            }
-            else if (base64.startsWith("/9j/")) {
-                contentType = "image/jpeg";
-            }
-        }
-        return "data:" + contentType + ";base64," + base64;
-    }
-
-    protected static String encodeResourceURL(FacesContext context, String src, boolean cache) {
-        return context.getExternalContext().encodeResourceURL(ResourceUtils.appendCacheBuster(src, cache));
-    }
-
-    protected static byte[] toByteArray(InputStream is) {
-        try {
-            try (ByteArrayOutputStream buffer = new ByteArrayOutputStream()) {
-                int nRead;
-                byte[] data = new byte[16384];
-
-                while ((nRead = is.read(data, 0, data.length)) != -1) {
-                    buffer.write(data, 0, nRead);
-                }
-
-                buffer.flush();
-
-                return buffer.toByteArray();
-            }
-        }
-        catch (Exception e) {
-            throw new FacesException("Could not read InputStream to byte[]", e);
-        }
-    }
-
-    protected static byte[] toByteArray(Consumer<OutputStream> os) {
-        ByteArrayOutputStream buffer = new ByteArrayOutputStream();
-        os.accept(buffer);
-
-        return buffer.toByteArray();
+        return ResourceUtils.encodeResourceURL(context, builder.toString(), cache);
     }
 
     protected static String md5(String input) {
